<resources>
    <string name="app_name">Aptitude Calculator</string>
    <string name="welcome">W E L C O M E</string>
    <string name="go_to_aptitude_calculator"><![CDATA[Go to Aptitude Calculator ->  ]]></string>
    <string name="click">Click</string>
    <string name="hello">hello</string>
    <string name="select_from_below">Select From Below</string>
    <string name="divisibility">DIVISIBILITY</string>
    <string name="hcf_amp_lcm"><![CDATA[HCF & LCM]]></string>
    <string name="sen1">\'Enter the numbers one by one. Press Submit to calculate</string>
    <string name="enter_the_number">Enter the Number:</string>
    <string name="submit">Submit</string>
    <string name="input_number">Input NUmber</string>
    <string name="clear">clear</string>
    <string name="percentages">PERCENTAGES</string>
    <string name="enter_atleast_2_fields">Enter atleast 2 fields</string>
    <string name="enter_profit">Enter Profit:</string>
    <string name="enter_loss">Enter Loss:</string>
    <string name="enter_profit_per">Enter Profit %:</string>
    <string name="enter_loss_per">Enter Loss %:</string>
    <string name="enter_cp">Enter Cost Price:</string>
    <string name="enter_selling_price">Enter Selling Price:</string>
    <string name="enter_here">Enter here</string>
    <string name="enter">Enter</string>
    <string name="enter_value">Enter value</string>
    <string name="percent_symbol">%</string>
    <string name="of">of</string>
    <string name="calculate_value">Calculate Value</string>
    <string name="calculate_percentage">Calculate Percentage</string>
    <string name="take_a_quiz"><![CDATA[Take a quiz ->]]></string>
    <string name="revise_formulas"><![CDATA[revise formulas ->]]></string>
    <string name="unit_coversions">Unit Conversions</string>
    <string name="km_hr">km/hr</string>
    <string name="convert">Convert</string>
    <string name="m_s">m/s</string>
    <string name="enter_value_in_km_hr">Enter value in km/hr</string>
    <string name="enter_value_in_m_s">Enter value in m/s</string>
    <string name="simple_interest">Simple Interest</string>
    <string name="enter_atleast_3_fields">Enter atleast 3 fields</string>
    <string name="enter_simple_interest">Enter Simple Interest</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="enter_time_period">Enter Time Period</string>
    <string name="enter_principal_amount">Enter Principal Amount</string>
    <string name="calculate">Calculate</string>
    <string name="simple_interest_h">SIMPLE INTEREST</string>
    <string name="profit_amp_loss"><![CDATA[PROFIT & LOSS]]></string>
    <string name="prime_output">The Number is Prime</string>

</resources>