<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="#87CEEB"
    tools:context=".Interest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_interest"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="#A52A2A"
            android:background="@drawable/background1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_atleast_3_fields"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/si_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_simple_interest"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/rate_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_rate"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/time_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_time_period"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_principal_amount"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:rippleColor="#FF0000"
            android:text="@string/calculate"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/ans_si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/si_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:rippleColor="#FF0000"
            android:text="@string/clear"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            />







    </LinearLayout>





</ScrollView>