<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="#87CEEB"
    tools:context=".ProfitLoss">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profit_amp_loss"
            android:textColor="#A52A2A"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/background1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_atleast_2_fields"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/profit_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_profit"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />

        <EditText
            android:id="@+id/loss_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_loss"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />

        <EditText
            android:id="@+id/profit_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_profit_per"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/loss_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_loss_per"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_cp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_selling_price"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pl_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/submit"
            android:backgroundTint="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:rippleColor="#FF0000"
            app:cornerRadius="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/plheading"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="@color/black"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/plperheading"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/plvalue"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="#FF0000"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/plpervalue"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="#FF0000"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/spheading"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="@color/black"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/cpheading"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/spvalue"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="#FF0000"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/cpvalue"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="#FF0000"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                />

        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/pl_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/clear"
            android:backgroundTint="@color/white"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:rippleColor="#FF0000"
            app:cornerRadius="20dp"/>



    </LinearLayout>


</ScrollView>