<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="#87CEEB"
    tools:context=".divisibility">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >
            <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/enter_the_number"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#A52A2A"
                        android:layout_marginTop="25dp"
                        />
            <EditText
                android:id="@+id/number"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="80dp"
                android:inputType="number"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:hint="@string/enter_here"
                />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/submit"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:rippleColor="#8B0000"
            app:cornerRadius="20dp"/>

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/d_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/clear"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:rippleColor="#8B0000"
            app:cornerRadius="20dp"/>




    </LinearLayout>







</ScrollView>