<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="#87CEEB"
    tools:context=".Apticalculator">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_from_below"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:paddingTop="20dp"
            >
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/hcf_amp_lcm"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#A52A2A"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/hcf_lcm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/click"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="20dp"
                app:cornerRadius="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:paddingTop="20dp"
            >
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/divisibility"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#A52A2A"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/divisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/click"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="20dp"
                app:cornerRadius="10dp"/>
        </LinearLayout>




    </LinearLayout>

</ScrollView>

